# nixos-hetzner

./: .gitignore  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.adoc  CONTRIBUTING.md  LICENSE.spdx  README.adoc  README.md  bb.edn  flake.nix
.github/workflows/: cleanup.yml  propose-release.yml  publish.yml  release.yml  update.yml
doc/: antora.yml  manifest.edn
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: index.adoc
nixos/modules/virtualisation/: hcloud-config.nix  hcloud-image.nix
pkgs/systemd-network-generator-hcloud/: package.nix
scripts/: cleanup.sh
smoke_test/: default.nix  pyproject.toml
smoke_test/src/hcloud_smoke_test/: smoke_test.py
