[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hcloud-smoke-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hcloud",
    "paramiko",
]

[project.scripts]
hcloud-smoke-test = "hcloud_smoke_test.smoke_test:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
